--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.51",
     "@vuepress/plugin-nprogress": "^2.0.0-beta.51",
     "@vuepress/plugin-search": "^2.0.0-beta.51",
+    "@vuepress/plugin-toc": "^2.0.0-beta.53",
     "vuepress": "^2.0.0-beta.51",
-    "vuepress-plugin-auto-sidebar": "^2.4.0-alpha.5"
+    "vuepress-plugin-auto-sidebar": "^2.4.0-alpha.5",
+    "vuepress-plugin-right-anchor": "^2.1.0-rc.2"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
