--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "docs:dev": "vuepress dev src"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.66",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.66",
-    "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.66",
-    "vuepress-plugin-blog2": "2.0.0-beta.235",
-    "vuepress-plugin-photo-swipe": "2.0.0-beta.235",
-    "vuepress-theme-hope": "2.0.0-beta.235"
+    "@vuepress/bundler-vite": "2.0.0-rc.8",
+    "@vuepress/client": "2.0.0-rc.8",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.17",
+    "@vuepress/plugin-git": "^2.0.0-rc.15",
+    "vue": "^3.4.21",
+    "vuepress": "2.0.0-rc.8",
+    "vuepress-plugin-blog2": "2.0.0-rc.20",
+    "vuepress-plugin-photo-swipe": "2.0.0-rc.22",
+    "vuepress-theme-hope": "2.0.0-rc.26"
   }
 }
